# merdok

./: .gitignore  README.md  app.py  blah.py  christian-advice-gpt.code-workspace  merdok.code-workspace  package-lock.json  package.json  player_inventory.json  pyproject.toml  requirements.txt  schema.graphql  serverless-compose.yml  serverless.yml  test.py  ui.py  void.txt  write.py
.serverless/: state.dev.json
backend/: README.md  handler.py  requirements.txt  serverless.yml
characters/: character.py  enemy.py  inventory.py  player.py
characters.py/: __init__.py
dialouge/: __init__.py  intro.py
dice/: __init__.py  roll.py
dungeon-master/: __init__.py  chat.py
frontend/: package-lock.json  package.json  serverless.yml  tailwind.config.js
frontend/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
frontend/src/pages/: index.tsx
items/: __init__.py  armor.py  item.py  potion.py  weapon.py
merdok/tests/unit/: test_merdok_stack.py
resolvers/: listMessagesRequest.vtl  listMessagesResponse.vtl  sendMessageToChatRequest.vtl  sendMessageToChatResponse.vtl
src/: handler.py
