[tool.poetry]
name = "merdok"
version = "0.1.0"
description = ""
authors = ["Aaron West <aphexlog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venv = ".venv"
venvPath = "."
