[tool.poetry]
name = "merdok"
version = "0.1.0"
description = ""
authors = ["Aaron West <aphexlog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.35.10"
boto3 = "^1.34.144"
mypy-boto3-bedrock = "^1.34.143"
mypy-boto3-bedrock-runtime = "^1.34.143"
pyaudio = "^0.2.14"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venv = ".venv"
venvPath = "."
